# insur-rag

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-compose-wsl.yaml  docker-compose.yaml  entrypoint.sh  requirements.txt
data/: system_prompt.txt
data/processed_json/: 10來旺(112)DM_1140101.json  1130701打工遊學渡假險-DM.json  2024財運亨通旺鋪保-All in one-1140207.json  ITS享利年年_DM11203.json  中信產-「樂安居-自住保」ALL IN ONE-1140709.json  享利一生_DM1140101.json  享利雙收終身保險(113)_DM1140101.json  享美金_DM11401.json  佳倍優_DM11201.json  保誠人壽新美滿相傳外幣終身壽險(定期給付型).json  保誠人壽美滿相傳外幣終身壽險(113)(定期給付型).json  傳富倍多紛_DM11401.json  傳富美樂福_DM11407.json  傳富萬豪_DM11407.json  傳富雄保倍2_DM11407.json  億美利_DM11407 .json  優利傳承_DM1140627啟用.json  優利精選_簡報檔11110.json  優利金沛_DM1140627啟用.json  可樂美_DM11408.json  台灣人壽臻美利美元利率變動型終身壽險.json  吉享紅_DM11406.json  吉美世_DM11407.json  吉美得_DM11407.json  國內NTD DM-1130401適用.json  國外NTA DM-1130401適用版.json  國泰人壽超飛揚變額年金保險_外幣變額年金保險.json  圓滿鑽-DM1140101啟用.json  基業長鴻_DM11401.json  多享利_DM11404.json  大基大利_DM11401.json  大富人生_DM11401.json  天天有利_DM11401.json  天天開鑫_DM11401.json  好禮駕在All in one-11401.json  安聯人壽新吉星報喜(112)系列商品.json  富享世代-DM1140101啟用.json  富利人生_DM11403.json  富御守護_DM11407.json  富御安康_DM11407.json  (+78 more)
frontend/: index.html
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml
k8s-reference/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml
pysrc/: check_models.py  etl_docx_to_json.py  etl_pdf_to_json.py  pdf_parser.py  rerank_server.py
src/: lib.rs  main.rs  main_old  models.rs
tools/: viewer.py
