[package]
name = "insur-rag"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Jack Chou"]

[dependencies]
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
axum = "0.8.8"
dotenvy = "0.15.7"
fastembed = "5.6.0"
futures = "0.3.31"
hex = "0.4.3"
lancedb = "0.23.1"
redis = { version = "1.0.2", features = ["tokio-comp"] }
regex = "1.12.2"
# PyO3 用來呼叫 Python，auto-initialize 功能會自動尋找環境
# pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.20.0"
walkdir = "2.4" # 之後掃描目錄用，先加進來

[lib]
name = "insur_rag"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
